syntax="proto3";

option go_package = "protobuf/generated/user";

import "google/protobuf/any.proto";
import "protobuf/comunication/instant_messaging.proto";
import "protobuf/comunication/socialmedia.proto";

enum Gender {
    UNSPECIFIED = 0;
    MALE = 1;
    FEMALE = 2;
}

message User {
    uint32 id = 1;
    string username = 2;
    bool is_active = 3 [json_name="is_active"];
    bytes password = 4;

    // Array of strings
    repeated string emails = 5;
    Gender gender = 6;

    Address address = 7;

    // Any
    google.protobuf.Any communication_channel = 16 [json_name="communication_channel"];

    // one of
    oneof electronic_comunication_channel{ 
        InstantMessaging instant_messaging = 17 [json_name="instant_messaging"];
        SocialMedia social_media = 18 [json_name="social_media"];
    };

    map<string, uint32> skill_rating = 19 [json_name="skill_rating"];
}

message Address {
    string street = 1;
    string city = 2;
    string country = 3;
    Coords coordinate = 16;

    message Coords {
        double latitude = 1;
        double logitude = 2;
    }
}